实现多用户博客系统

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,10 +1,11 @@
 doctype html
 html(lang="en")
     head
-        title #{title}
+        title Knowledgebase
+        link(rel="stylesheet", href="/bootstrap/dist/css/bootstrap.css")
     body
         block content
         br
         hr
         footer
-            p Copyright &copy; 2018
+            p.text-center Copyright &copy; 2018
